# ddd-crm-poc

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml
scripts/: populate_db.py
scripts/fixtures/: __init__.py  file.py  sql.py
src/authentication/infrastructure/: config.py  exceptions.py  roles.py
src/authentication/infrastructure/service/: base.py  firebase.py
src/authentication/presentation/: container.py
src/authentication/presentation/rest/: api.py  deps.py  schemas.py
src/building_blocks/application/: command.py  command_model.py  exceptions.py  filters.py  nested_model.py  query_model.py
src/building_blocks/domain/: attrs_validators.py  entity.py  exceptions.py  validators.py  value_object.py
src/building_blocks/domain/utils/: date.py  iterables.py
src/building_blocks/infrastructure/: dto.py  exceptions.py  vo_service.py
src/building_blocks/infrastructure/file/: command.py  config.py  filters.py  io.py  vo_service.py
src/building_blocks/infrastructure/sql/: command.py  config.py  db.py  filters.py  vo_service.py
src/building_blocks/infrastructure/utils/: comparator.py  decorators.py  json.py
src/building_blocks/presentation/: responses.py
src/containers/: config.py  container.py  file.py  sql.py
src/customer_management/application/: acl.py  command.py  command_model.py  exceptions.py  query.py  query_model.py  query_service.py
src/customer_management/application/use_case/: command.py
src/customer_management/domain/: exceptions.py
src/customer_management/domain/repositories/: customer.py
src/customer_management/domain/services/: customer.py
src/customer_management/domain/value_objects/: address.py  company_info.py  company_segment.py  contact_method.py  country.py  customer_status.py  industry.py  language.py
src/customer_management/infrastructure/file/: config.py
src/customer_management/presentation/: container.py
src/customer_management/presentation/rest/: api.py
src/entrypoints/: __init__.py  rest.py
src/sales/application/: acl.py  service.py  services.py
src/sales/application/lead/: command.py  command_model.py  exceptions.py  query.py  query_model.py  query_service.py
src/sales/application/notes/: command_model.py  query_model.py
src/sales/application/opportunity/: command.py  command_model.py  query.py  query_model.py  query_service.py
src/sales/application/sales_representative/: command.py  command_model.py  query.py  query_model.py  query_service.py
src/sales/domain/: exceptions.py
src/sales/domain/entities/: lead.py  lead_assignments.py  notes.py  opportunity.py  sales_representative.py
src/sales/domain/repositories/: lead.py  opportunity.py  sales_representative.py
src/sales/domain/service/: lead.py  opportunity.py  shared.py
src/sales/domain/value_objects/: acquisition_source.py  activity.py  contact_data.py  lead_assignment.py  lead_assignment_entry.py  note.py  offer_item.py  opportunity_stage.py  priority.py  product.py
src/sales/infrastructure/file/: config.py
src/sales/infrastructure/json/: config.py  query_service.py
src/sales/presentation/: container.py
src/sales/presentation/rest/: api.py
tests/: conftest.py
tests/application/building_blocks/: test_filters.py  test_nested_model.py
tests/application/customer_management/: test_customer_command.py  test_customer_query.py
tests/application/sales/: test_lead_command.py  test_lead_query.py  test_opportunity_command.py  test_opportunity_query.py  test_sales_representative_command.py  test_sales_representative_query.py
tests/containers/: test_config.py
tests/domain/customer_management/: test_customer.py
tests/domain/sales/: conftest.py  test_lead.py  test_opportunity.py  test_sales_representative.py
tests/fixtures/file/: data_fixtures.py  db_fixtures.py
tests/fixtures/sql/: data_fixtures.py  db_fixtures.py
tests/infrastructure/auth/: test_firebase_service.py
tests/infrastructure/file/: conftest.py
tests/infrastructure/file/building_blocks/: test_filters.py  test_uow_integration.py  test_uow_unit.py  test_vo_service.py
tests/infrastructure/file/customer_management/: test_customer_query_service.py  test_customer_repository.py
tests/infrastructure/file/sales/: conftest.py  test_lead_query_service.py  test_lead_repository.py  test_opportunity_query_service.py  test_opportunity_repository.py  test_sales_representative_query_service.py  test_sales_representative_repository.py
tests/infrastructure/sql/: conftest.py
tests/infrastructure/sql/building_blocks/: conftest.py  test_db.py  test_filters_integration.py  test_filters_unit.py  test_uow_integration.py  test_uow_unit.py  test_vo_service.py
tests/infrastructure/sql/customer_management/: test_customer_query_service.py  test_customer_repository.py
tests/infrastructure/sql/sales/: test_lead_query_service.py  test_lead_repository.py  test_opportunity_query_service.py  test_opportunity_repository.py  test_sales_representative_query_service.py
tests/presentation/rest/: conftest.py
(+58 files in other folders)
